--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,6 @@
-altair
-annotated-type
-anyio
-attrs
-blinker
-blis
-cachetools
-catalogue
-certifi
-charset-normalize
-click
-cloudpathlib
-colorama
-confection
-cymem
-distro
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-gitdb
-GitPython
-h11
-httpcore
-httpx
-idna
-Jinja2
-jiter
-joblib
-jsonschema
-jsonschema-specifications
-langcodes
-language_data
-marisa-trie
-markdown-it-py
-MarkupSafe
-mdurl
-murmurhash
-narwhals
-numpy
-openai
-packaging
 pandas
-pillow
-preshed
-protobuf
-pyarrow
-pydantic
-pydantic_core
-pydeck
-Pygments
-
-pytz
-referencing
-requests
-rich
-rpds-py
-scikit-learn
-scipy
-shellingham
-six
-smart-open
-smmap
-sniffio
 spacy
-spacy-legacy
-spacy-loggers
-srsly
+sklearn
+openai
 streamlit
-tenacity
-thinc
-threadpoolctl
-toml
-tornado
-tqdm
-typer
-typing-inspection
-typing_extensions
-tzdata
-urllib3
-wasabi
-watchdog
-weasel
-wrapt
+
