--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 pandas
 spacy
+spacy
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+
 sklearn
 openai
 streamlit
